Closed Bug 1296151 Opened 8 years ago Closed 8 years ago

suite/profile/migration/src/nsNetscapeProfileMigratorBase.h:83:14: error: 'GetSourceExists' overrides a member function but is not marked 'override' [-Werror,-Winconsistent-missing-override]

Categories

(SeaMonkey :: Build Config, defect)

SeaMonkey 2.48 Branch
x86_64
macOS
defect
Not set
normal

Tracking

(seamonkey2.48 fixed)

RESOLVED FIXED
seamonkey2.48
Tracking Status
seamonkey2.48 --- fixed

People

(Reporter: ewong, Assigned: ewong)

References

Details

Attachments

(2 files)

Bustage on OSX64: (while there are 5 pending builds, I'm filing this here just in case it's not fixed by any of those pending builds) /builds/slave/c-cen-t-osx64/build/clang/bin/clang++ -arch x86_64 -std=gnu++11 -o nsNetscapeProfileMigratorBase.o -c -fvisibility=hidden -fvisibility-inlines-hidden -DNDEBUG=1 -DTRIMMED=1 -I/builds/slave/c-cen-t-osx64/build/suite/profile/migration/src -I/builds/slave/c-cen-t-osx64/build/objdir/x86_64/suite/profile/migration/src -I/builds/slave/c-cen-t-osx64/build/objdir/x86_64/dist/include -I/builds/slave/c-cen-t-osx64/build/objdir/x86_64/dist/include/nspr -I/builds/slave/c-cen-t-osx64/build/objdir/x86_64/dist/include/nss -fPIC -DMOZILLA_CLIENT -include /builds/slave/c-cen-t-osx64/build/objdir/x86_64/mozilla-config.h -MD -MP -MF .deps/nsNetscapeProfileMigratorBase.o.pp -Qunused-arguments -Qunused-arguments -Wall -Wc++11-compat -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wsign-compare -Wtype-limits -Wunreachable-code -Wwrite-strings -Wno-invalid-offsetof -Wclass-varargs -Wloop-analysis -Wc++11-compat-pedantic -Wc++14-compat -Wc++14-compat-pedantic -Wc++1z-compat -Wimplicit-fallthrough -Werror=non-literal-null-conversion -Wstring-conversion -Wthread-safety -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-unknown-warning-option -Wno-return-type-c-linkage -gdwarf-2 -isysroot /Developer/SDKs/MacOSX10.7.sdk -fno-exceptions -fno-strict-aliasing -stdlib=libc++ -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -gdwarf-2 -O3 -fno-omit-frame-pointer -Werror /builds/slave/c-cen-t-osx64/build/suite/profile/migration/src/nsNetscapeProfileMigratorBase.cpp mkdir -p '.deps/' /builds/slave/c-cen-t-osx64/build/clang/bin/clang++ -arch x86_64 -std=gnu++11 -o AppData.o -c -fvisibility=hidden -fvisibility-inlines-hidden -DNDEBUG=1 -DTRIMMED=1 -DXPCOM_GLUE -I/builds/slave/c-cen-t-osx64/build/mozilla/xpcom/glue/standalone -I/builds/slave/c-cen-t-osx64/build/objdir/x86_64/xpcom/glue/standalone -I/builds/slave/c-cen-t-osx64/build/mozilla/xpcom/build -I/builds/slave/c-cen-t-osx64/build/mozilla/xpcom/threads -I/builds/slave/c-cen-t-osx64/build/objdir/x86_64/dist/include -I/builds/slave/c-cen-t-osx64/build/objdir/x86_64/dist/include/nspr -I/builds/slave/c-cen-t-osx64/build/objdir/x86_64/dist/include/nss -fPIC -DMOZILLA_CLIENT -include /builds/slave/c-cen-t-osx64/build/objdir/x86_64/mozilla-config.h -MD -MP -MF .deps/AppData.o.pp -Qunused-arguments -Qunused-arguments -Wall -Wc++11-compat -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wsign-compare -Wtype-limits -Wunreachable-code -Wwrite-strings -Wno-invalid-offsetof -Wclass-varargs -Wloop-analysis -Wc++11-compat-pedantic -Wc++14-compat -Wc++14-compat-pedantic -Wc++1z-compat -Wimplicit-fallthrough -Werror=non-literal-null-conversion -Wstring-conversion -Wthread-safety -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-unknown-warning-option -Wno-return-type-c-linkage -gdwarf-2 -isysroot /Developer/SDKs/MacOSX10.7.sdk -fno-exceptions -fno-strict-aliasing -stdlib=libc++ -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -gdwarf-2 -O3 -fno-omit-frame-pointer -Werror /builds/slave/c-cen-t-osx64/build/mozilla/xpcom/glue/AppData.cpp /builds/slave/c-cen-t-osx64/build/clang/bin/clang++ -arch x86_64 -std=gnu++11 -o FileUtils.o -c -fvisibility=hidden -fvisibility-inlines-hidden -DNDEBUG=1 -DTRIMMED=1 -DXPCOM_GLUE -I/builds/slave/c-cen-t-osx64/build/mozilla/xpcom/glue/standalone -I/builds/slave/c-cen-t-osx64/build/objdir/x86_64/xpcom/glue/standalone -I/builds/slave/c-cen-t-osx64/build/mozilla/xpcom/build -I/builds/slave/c-cen-t-osx64/build/mozilla/xpcom/threads -I/builds/slave/c-cen-t-osx64/build/objdir/x86_64/dist/include -I/builds/slave/c-cen-t-osx64/build/objdir/x86_64/dist/include/nspr -I/builds/slave/c-cen-t-osx64/build/objdir/x86_64/dist/include/nss -fPIC -DMOZILLA_CLIENT -include /builds/slave/c-cen-t-osx64/build/objdir/x86_64/mozilla-config.h -MD -MP -MF .deps/FileUtils.o.pp -Qunused-arguments -Qunused-arguments -Wall -Wc++11-compat -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wsign-compare -Wtype-limits -Wunreachable-code -Wwrite-strings -Wno-invalid-offsetof -Wclass-varargs -Wloop-analysis -Wc++11-compat-pedantic -Wc++14-compat -Wc++14-compat-pedantic -Wc++1z-compat -Wimplicit-fallthrough -Werror=non-literal-null-conversion -Wstring-conversion -Wthread-safety -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-unknown-warning-option -Wno-return-type-c-linkage -gdwarf-2 -isysroot /Developer/SDKs/MacOSX10.7.sdk -fno-exceptions -fno-strict-aliasing -stdlib=libc++ -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -gdwarf-2 -O3 -fno-omit-frame-pointer -Werror /builds/slave/c-cen-t-osx64/build/mozilla/xpcom/glue/FileUtils.cpp In file included from /builds/slave/c-cen-t-osx64/build/suite/profile/migration/src/nsNetscapeProfileMigratorBase.cpp:19: /builds/slave/c-cen-t-osx64/build/suite/profile/migration/src/nsNetscapeProfileMigratorBase.h:83:14: error: 'GetSourceExists' overrides a member function but is not marked 'override' [-Werror,-Winconsistent-missing-override] NS_IMETHOD GetSourceExists(bool* aSourceExists); ^ /builds/slave/c-cen-t-osx64/build/objdir/x86_64/dist/include/nsISuiteProfileMigrator.h:60:14: note: overridden virtual function is here NS_IMETHOD GetSourceExists(bool *aSourceExists) = 0; ^ In file included from /builds/slave/c-cen-t-osx64/build/suite/profile/migration/src/nsNetscapeProfileMigratorBase.cpp:19: /builds/slave/c-cen-t-osx64/build/suite/profile/migration/src/nsNetscapeProfileMigratorBase.h:84:14: error: 'GetSourceHasMultipleProfiles' overrides a member function but is not marked 'override' [-Werror,-Winconsistent-missing-override] NS_IMETHOD GetSourceHasMultipleProfiles(bool* aSourceHasMultipleProfiles); ^ /builds/slave/c-cen-t-osx64/build/objdir/x86_64/dist/include/nsISuiteProfileMigrator.h:63:14: note: overridden virtual function is here NS_IMETHOD GetSourceHasMultipleProfiles(bool *aSourceHasMultipleProfiles) = 0; ^ In file included from /builds/slave/c-cen-t-osx64/build/suite/profile/migration/src/nsNetscapeProfileMigratorBase.cpp:19: /builds/slave/c-cen-t-osx64/build/suite/profile/migration/src/nsNetscapeProfileMigratorBase.h:85:14: error: 'GetSourceProfiles' overrides a member function but is not marked 'override' [-Werror,-Winconsistent-missing-override] NS_IMETHOD GetSourceProfiles(nsIArray** aResult); ^ /builds/slave/c-cen-t-osx64/build/objdir/x86_64/dist/include/nsISuiteProfileMigrator.h:66:14: note: overridden virtual function is here NS_IMETHOD GetSourceProfiles(nsIArray * *aSourceProfiles) = 0; ^ /builds/slave/c-cen-t-osx64/build/clang/bin/clang++ -arch x86_64 -std=gnu++11 -o PLDHashTable.o -c -fvisibility=hidden -fvisibility-inlines-hidden -DNDEBUG=1 -DTRIMMED=1 -DXPCOM_GLUE -I/builds/slave/c-cen-t-osx64/build/mozilla/xpcom/glue/standalone -I/builds/slave/c-cen-t-osx64/build/objdir/x86_64/xpcom/glue/standalone -I/builds/slave/c-cen-t-osx64/build/mozilla/xpcom/build -I/builds/slave/c-cen-t-osx64/build/mozilla/xpcom/threads -I/builds/slave/c-cen-t-osx64/build/objdir/x86_64/dist/include -I/builds/slave/c-cen-t-osx64/build/objdir/x86_64/dist/include/nspr -I/builds/slave/c-cen-t-osx64/build/objdir/x86_64/dist/include/nss -fPIC -DMOZILLA_CLIENT -include /builds/slave/c-cen-t-osx64/build/objdir/x86_64/mozilla-config.h -MD -MP -MF .deps/PLDHashTable.o.pp -Qunused-arguments -Qunused-arguments -Wall -Wc++11-compat -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wsign-compare -Wtype-limits -Wunreachable-code -Wwrite-strings -Wno-invalid-offsetof -Wclass-varargs -Wloop-analysis -Wc++11-compat-pedantic -Wc++14-compat -Wc++14-compat-pedantic -Wc++1z-compat -Wimplicit-fallthrough -Werror=non-literal-null-conversion -Wstring-conversion -Wthread-safety -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-unknown-warning-option -Wno-return-type-c-linkage -gdwarf-2 -isysroot /Developer/SDKs/MacOSX10.7.sdk -fno-exceptions -fno-strict-aliasing -stdlib=libc++ -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -gdwarf-2 -O3 -fno-omit-frame-pointer -Werror /builds/slave/c-cen-t-osx64/build/mozilla/xpcom/glue/PLDHashTable.cpp 3 errors generated. make[5]: *** [nsNetscapeProfileMigratorBase.o] Error 1 make[4]: *** [suite/profile/migration/src/target] Error 2 make[4]: *** Waiting for unfinished jobs....
got stefanh's r+ over IRC.
Assignee: nobody → ewong
Status: NEW → ASSIGNED
Attachment #8782232 - Flags: review+
https://hg.mozilla.org/comm-central/rev/8652e7b2f314660ceaf1b22db5f682e8d7b84575 Bug 1296151 - Functions that override member functions need override. r=stefanh a=ewong
Are those all occurrences of needed override in /suite? We already fixed a ton in /mailnews.
Depends on: 1294260
(In reply to :aceman from comment #5) > Are those all occurrences of needed override in /suite? We already fixed a > ton in /mailnews. Yes, because we're busted on OSX64. Thankfully the /mailnews was fixed earlier on.
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → seamonkey2.48
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: