Bug 1296151 - Functions that override member functions need override. r=stefanh a=ewong